public class Film implements media {
    private String title;

    private int releaseDate;

    private int rating;

    private String category;

    public Film(String title, int releaseDate, int rating, String category) {
        this.title = title;
        this.releaseDate = releaseDate;
        this.rating = rating;
        this.category = category;
    }

    public String getTitle(){
        return getTitle();
    }




    public int getReleaseDate() {
        return getReleaseDate();
    }

    public int getRating() {
        return getRating();
    }

    public String getCategory() {
        return getCategory();
    }
}





